--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,7 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #222;
+$text-color:       #444;
 $background-color: #ffffff;
 $brand-color:      #2a7ae2;
 
